# trousers

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.selinux  TODO  aclocal.m4  bootstrap.sh  configure.in
doc/: TSS_programming_SNAFUs.txt
man/: Makefile.am
man/man3/: Makefile.am  Tspi_ChangeAuth.3  Tspi_ChangeAuthAsym.3  Tspi_Context_Close.3  Tspi_Context_CloseObject.3  Tspi_Context_Connect.3  Tspi_Context_Create.3  Tspi_Context_CreateObject.3  Tspi_Context_FreeMemory.3  Tspi_Context_GetCapability.3  Tspi_Context_GetDefaultPolicy.3  Tspi_Context_GetKeyByPublicInfo.3  Tspi_Context_GetKeyByUUID.3  Tspi_Context_GetRegisteredKeyByUUID.3  Tspi_Context_GetTpmObject.3  Tspi_Context_LoadKeyByBlob.3  Tspi_Context_LoadKeyByUUID.3  Tspi_Context_RegisterKey.3  Tspi_Context_UnregisterKey.3  Tspi_Data_Bind.3  Tspi_Data_Seal.3  Tspi_Data_Unbind.3  Tspi_Data_Unseal.3  Tspi_GetAttribData.3  Tspi_GetAttribUint32.3  Tspi_GetPolicyObject.3  Tspi_Hash_GetHashValue.3  Tspi_Hash_SetHashValue.3  Tspi_Hash_Sign.3  Tspi_Hash_UpdateHashValue.3  Tspi_Hash_VerifySignature.3  Tspi_Key_CertifyKey.3  Tspi_Key_ConvertMigrationBlob.3  Tspi_Key_CreateKey.3  Tspi_Key_CreateMigrationBlob.3  Tspi_Key_GetPubKey.3  Tspi_Key_LoadKey.3  Tspi_Key_UnloadKey.3  Tspi_PcrComposite_GetPcrValue.3  Tspi_PcrComposite_SelectPcrIndex.3  (+32 more)
man/man5/: tcsd.conf.5.in
man/man8/: tcsd.8  tcsd.8.in
src/: Makefile.am
src/include/: Makefile.am  atmel.h  auth_mgr.h  authsess.h  biosem.h  capabilities.h  hosttable.h  imaem.h  log.h  memmgr.h  obj.h  obj_context.h  obj_daa.h  obj_encdata.h  obj_hash.h  obj_nv.h  obj_pcrs.h  obj_policy.h  obj_rsakey.h  obj_tpm.h  req_mgr.h  rpc_tcstp.h  rpc_tcstp_tcs.h  rpc_tcstp_tsp.h  spi_internal_types.h  spi_utils.h  tcs_aik.h  tcs_api.h  tcs_context.h  tcs_internal_types.h  tcs_tsp.h  tcs_utils.h  tcsd.h  tcsd_ops.h  tcsd_wrap.h  tcsem.h  tcslog.h  tcsps.h  tddl.h  threads.h  (+7 more)
src/include/linux/: tpm.h
src/include/trousers/: trousers.h  tss.h
src/include/tss/: compat11b.h  platform.h  spi_exports.h  spi_literals.h  tcpa_defines.h  tcpa_error.h  tcpa_literals.h  tcpa_struct.h  tcpa_typedef.h  tcpa_types.h  tcs.h  tcs_defines.h  tcs_error.h  tcs_exports.h  tcs_structs.h  tcs_typedef.h  tddl_error.h  tddlapi_error.h  tddli.h  tpm.h  trousers.h  tspi.h  tss.h  tss_defines.h  tss_error.h  tss_error_basics.h  tss_structs.h  tss_typedef.h
src/tcs/: Makefile.am  atmel.c  auth_mgr.c  cache.c  cxt.c  imaem.c  log.c  req_mgr.c  tcs_aik.c  tcs_auth_mgr.c  tcs_caps.c  tcs_context.c  tcs_context_key.c  tcs_counter.c  tcs_evlog.c  tcs_evlog_biosem.c  tcs_evlog_imaem.c  tcs_key.c  tcs_key_mem_cache.c  tcs_key_ps.c  tcs_migration.c  tcs_pbg.c  tcs_ps.c  tcs_quote.c  tcs_req_mgr.c  tcs_seal.c  tcs_utils.c  tcscm.c  tcsem.c  tcsi_admin.c  tcsi_aik.c  tcsi_audit.c  tcsi_auth.c  tcsi_bind.c  tcsi_caps.c  tcsi_caps_tpm.c  tcsi_certify.c  tcsi_changeauth.c  tcsi_context.c  tcsi_counter.c  (+22 more)
src/tcs/crypto/openssl/: crypto.c
src/tcs/ps/: ps_utils.c  tcsps.c  tspps.c
src/tcs/rpc/tcstp/: rpc.c  rpc_admin.c  rpc_aik.c  rpc_audit.c  rpc_auth.c  rpc_bind.c  rpc_caps.c  rpc_caps_tpm.c  rpc_certify.c  rpc_changeauth.c  rpc_cmk.c  rpc_context.c  rpc_counter.c  rpc_daa.c  rpc_delegate.c  rpc_dir.c  rpc_ek.c  rpc_evlog.c  rpc_key.c  rpc_maint.c  rpc_migration.c  rpc_nv.c  rpc_oper.c  rpc_own.c  rpc_pcr_extend.c  rpc_ps.c  rpc_quote.c  rpc_quote2.c  rpc_random.c  rpc_seal.c  rpc_selftest.c  rpc_sign.c  rpc_tick.c  rpc_transport.c
src/tcsd/: Makefile.am  platform.c  svrside.c  tcsd_conf.c  tcsd_threads.c  tcsd_wrap.c
src/tcsd_api/: calltcsapi.c  clntside.c  hosttable.c  tcstp.c
src/tddl/: Makefile.am  tddl.c
src/trspi/: Makefile.am  trousers.c
src/trspi/crypto/openssl/: crypto.c  hash.c  rsa.c  symmetric.c
src/tspi/: ConvertLib.c  Makefile.am  keyreg.c  log.c  memmgr.c  obj.c  obj_context.c  obj_daa.c  obj_encdata.c  obj_hash.c  obj_migdata.c  obj_nv.c  obj_pcrs.c  obj_policy.c  obj_regdkey.c  obj_rsakey.c  obj_tpm.c  secrets.c  spi_context.c  spi_data.c  spi_getset.c  spi_hash.c  spi_key.c  spi_pcr.c  spi_policy.c  spi_tpm.c  spi_utils.c  ssl_ui.c  tsp_admin.c  tsp_aik.c  tsp_asym.c  tsp_audit.c  tsp_auth.c  tsp_bind.c  tsp_caps.c  tsp_caps_tpm.c  tsp_certify.c  tsp_changeauth.c  tsp_context_mem.c  tsp_daa.c  (+59 more)
src/tspi/crypto/openssl/: crypto.c
src/tspi/daa/: daa_parameter.c  test_sign.c
src/tspi/daa/big_integer/test/: test.c
src/tspi/daa/daa_platform/: platform.c  test.c  test_join.c
src/tspi/gtk/: callbacks.c  interface.c  interface.h  main.c  support.c  support.h
src/tspi/ps/: ps_utils.c  tspps.c
src/tspi/rpc/: hosttable.c  tcs_api.c
src/tspi/rpc/tcstp/: rpc.c  rpc_admin.c  rpc_aik.c  rpc_audit.c  rpc_auth.c  rpc_bind.c  rpc_caps.c  rpc_caps_tpm.c  rpc_certify.c  rpc_changeauth.c  rpc_cmk.c  rpc_context.c  rpc_counter.c  rpc_daa.c  rpc_delegate.c  rpc_dir.c  rpc_ek.c  rpc_evlog.c  rpc_key.c  rpc_maint.c  rpc_migration.c  rpc_nv.c  rpc_oper.c  rpc_own.c  rpc_pcr_extend.c  rpc_ps.c  rpc_quote.c  rpc_quote2.c  rpc_random.c  rpc_seal.c  rpc_selftest.c  rpc_sign.c  rpc_tick.c  rpc_transport.c
src/tspi/ssh_askpass/: readpass.c
tools/: Makefile.am  ps_convert.c  ps_inspect.c
