tssincludedir = $(includedir)/tss
trousersincludedir = $(includedir)/trousers

tssinclude_HEADERS = tss/tcpa_error.h \
		     tss/tcs_error.h \
		     tss/tcs_defines.h \
		     tss/tcs.h \
		     tss/tddlapi_error.h \
		     tss/tspi.h \
		     tss/tss_error.h \
		     tss/platform.h \
		     tss/tcpa_struct.h \
		     tss/tcs_structs.h \
		     tss/tddl_error.h \
		     tss/tss_defines.h \
		     tss/tss_structs.h \
		     tss/tcpa_defines.h \
		     tss/tcpa_typedef.h \
		     tss/tcs_typedef.h \
		     tss/tddli.h \
		     tss/tss_error_basics.h \
		     tss/tss_typedef.h \
		     tss/compat11b.h \
		     tss/tpm.h \
		     tss/tpm_error.h \
		     tss/tpm_ordinal.h
trousersinclude_HEADERS = trousers/tss.h trousers/trousers.h

